--- a/AlkoApp/app/src/main/AndroidManifest.xml
+++ b/AlkoApp/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     package="com.example.alkoapp">
 
     <dist:module dist:instant="true" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
