--- a/AlkoApp/app/build.gradle
+++ b/AlkoApp/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     //Retrofit and GSON
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.6.0'
 
     //Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
